crates/riri-npm/tests/snapshots/parse_fixtures__parse_npm_fixture@npm-v2-packages-field-only.snap
---
source: crates/riri-npm/tests/parse_fixtures.rs
expression: snapshot
---
node_modules/fake-package-01: {node: >=6.9.0}
