crates/riri-npm/tests/snapshots/parse_fixtures__parse_npm_fixture@npm-v3-engines-as-array.snap
---
source: crates/riri-npm/tests/parse_fixtures.rs
expression: snapshot
---
arr-engines: ["node >= 7"]
