crates/riri-npm/tests/snapshots/parse_fixtures__parse_npm_fixture@npm-v3-no-intersection.snap
---
source: crates/riri-npm/tests/parse_fixtures.rs
expression: snapshot
---
: {node: 18.14}
foo: {node: 18.13}
