crates/riri-npm/tests/snapshots/parse_fixtures__parse_npm_fixture@npm-v3-no-npmrc.snap
---
source: crates/riri-npm/tests/parse_fixtures.rs
expression: snapshot
---
node_modules/all: {node: *}
node_modules/arr: ["node >= 7"]
node_modules/bar: {node: >=12.22.0, npm: >=6.0.0, yarn: ^1.22.4}
node_modules/complex1: {node: ^12.13.0 || ^14.15.0 || ^16.10.0 || >=17.0.0}
node_modules/complex2: {node: >=16.0.0||^14.17.0}
node_modules/foo: {node: >=6.9.0}
