crates/riri-npm/tests/snapshots/parse_fixtures__parse_npm_fixture@npm-v3-or-ranges-node-npm-yarn.snap
---
source: crates/riri-npm/tests/parse_fixtures.rs
expression: snapshot
---
all: {node: *}
arr: ["node >= 7"]
bar: {node: >=12.22.0, npm: >=6.0.0, yarn: ^1.22.4}
complex1: {node: ^12.13.0 || ^14.15.0 || ^16.10.0 || >=17.0.0}
complex2: {node: >=16.0.0||^14.17.0}
foo: {node: >=6.9.0}
