crates/riri-npm/tests/snapshots/parse_fixtures__parse_npm_fixture@npm-v3-wildcard-and-missing.snap
---
source: crates/riri-npm/tests/parse_fixtures.rs
expression: snapshot
---
with-constraint: {node: >=16.0.0}
with-wildcard: {node: *}
